postgrest 4.3, docs on manually extracting a JWT using curl.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,7 +97,7 @@ services:
       - endpoint=http://api/
       - resource_single=true
   api:
-    image: havengrc-docker.jfrog.io/begriffs/postgrest:v0.4.2.0
+    image: havengrc-docker.jfrog.io/postgrest/postgrest:v0.4.3.0
     command: [postgrest, "/config"]
     ports:
       - "3001:80"
