--- a/postgrest/config
+++ b/postgrest/config
@@ -1,6 +1,16 @@
 db-uri = "postgres://postgres@db/mappamundi_dev"
 db-schema = "1"
-db-anon-role = "anonymous"
+# in dev, the swagger UI introspects without providing auth.
+# Because postgrest uses the role of the user when determining
+# how much of the API to show, we need to make the anon role 
+# have elevated permissions,
+# even though we definitely don't want to allow this in production.
+# track https://github.com/begriffs/postgrest/issues/954 to see if this changes
+# a possible way to handle this would be to embed the swagger viewing inside
+# our webapp and find a way to give the swagger requests the JWT from the logged
+# in user rather than being anonymous.
+# db-anon-role = "anonymous"
+db-anon-role = "postgres"
 db-pool = 10
 
 server-host = "*4"
