PostgREST uses Keycloak JWK. Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,6 +107,7 @@ services:
       - sqitch
     volumes:
       - ./postgrest/config:/config
+      - ./postgrest/keycloak-dev-public-key.json:/keycloak-dev-public-key.json
   swagger:
     image: havengrc-docker.jfrog.io/swaggerapi/swagger-ui:v3.0.2
     ports:
