Use custom build of postgrest while waiting for next release.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,6 +108,7 @@ services:
     volumes:
       - ./postgrest/config:/config
       - ./postgrest/keycloak-dev-public-key.json:/keycloak-dev-public-key.json
+      - ./postgrest/vendor/postgrest:/usr/local/bin/postgrest
   swagger:
     image: havengrc-docker.jfrog.io/swaggerapi/swagger-ui:v3.0.2
     ports:
