Working apitest that exercises JWT authorization.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,6 +90,7 @@ services:
       - ./apitest:/usr/src/app
     links:
       - api
+      - keycloak
     depends_on:
       - start_dependencies
     command: [cucumber]
