Start keycloak server during test phase.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,7 @@ jobs:
           working_directory: webui
       - run: docker-compose run start_dependencies
       - run: docker-compose run sqitch
+      - run: docker-compose run start_keycloak
       - run: ./test
       - run:
           name: Build marketing site with hugo
