Add a sleep statement because I have no self-respect. Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ jobs:
       - run: docker-compose run start_dependencies
       - run: docker-compose run sqitch
       - run: docker-compose run start_keycloak
+      - run: sleep 60
       - run: ./test
       - run:
           name: Build marketing site with hugo
