Tell CircleCI to use a more recent docker.
We need this in order to use multi stage docker builder.

Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,8 @@ jobs:
     machine: true
     steps:
       - checkout
+      - setup_remote_docker:
+          version: 17.10.0-ce
       - run:
           name: Check docker compose version
           command: docker-compose -v
