Mount the vendor directory back over the outside mount.
This stops the vendor tree inside the container from
being shadowed by the source tree mount from outside
the container.

Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -133,6 +133,7 @@ services:
     working_dir: /go/src/github.com/kindlyops/mappamundi/havenapi
     volumes:
       - ./havenapi:/go/src/github.com/kindlyops/mappamundi/havenapi
+      - /go/src/github.com/kindlyops/mappamundi/havenapi/vendor
     build:
       context: .
       dockerfile: ./havenapi/Dockerfile-hotreload
