Fix keycloak proxy error.
Without this setting, logging into keycloak admin via
localhost:2015/auth would succeed and then the authorization
would get cleared out. Seems related to
https://issues.jboss.org/browse/KEYCLOAK-4717
Setting the proxy variable fixes it.
https://stackoverflow.com/questions/44624844/configure-reverse-proxy-for-keycloak-docker-with-custom-base-url

Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,7 @@ services:
       - POSTGRES_PORT_5432_TCP_ADDR=postgres
       - KEYCLOAK_USER=admin
       - KEYCLOAK_PASSWORD=admin
+      - PROXY_ADDRESS_FORWARDING=true
     ports:
       - "8080:8080"
     links:
