initial DB access working on new go api server Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -130,7 +130,7 @@ services:
       - POSTGRES_DB=mappamundi_dev
     volumes:
       - ./postgresql-data:/var/lib/postgresql
-  newapi:
+  havenapi:
     working_dir: /go/src/github.com/kindlyops/mappamundi/havenapi
     volumes:
       - ./havenapi:/go/src/github.com/kindlyops/mappamundi/havenapi
