--- a/havenapi/Gopkg.toml
+++ b/havenapi/Gopkg.toml
@@ -48,3 +48,11 @@
 [[constraint]]
   branch = "master"
   name = "github.com/unrolled/secure"
+
+[[constraint]]
+  name = "github.com/nleof/goyesql"
+  version = "1.0.1"
+
+[[constraint]]
+  name = "github.com/gobuffalo/packr"
+  version = "1.9.0"
