--- a/havenapi/database.yml
+++ b/havenapi/database.yml
@@ -7,7 +7,7 @@ development:
   pool: 5
 
 test:
-  url: {{envOr "TEST_DATABASE_URL" "postgres://postgres:postgres@localhost:5434/mappamundi_test?sslmode=disable"}}
+  url: {{envOr "TEST_DATABASE_URL" "postgres://postgres:postgres@db:5432/mappamundi_test?sslmode=disable"}}
 
 production:
   url: {{envOr "DATABASE_URL" "postgres://postgres:postgres@127.0.0.1:5432/mappamundi_production?sslmode=disable"}}
