--- a/sqitch.conf
+++ b/sqitch.conf
@@ -8,3 +8,5 @@
 	# client = psql
 [target "dev"]
 	uri = db:pg://postgres@db:5432/mappamundi_dev
+[target "test"]
+  uri = db:pg://postgres@db:5432/mappamundi_test
