--- a/havenapi/Gopkg.toml
+++ b/havenapi/Gopkg.toml
@@ -56,3 +56,7 @@
 [[constraint]]
   name = "github.com/gobuffalo/packr"
   version = "1.9.0"
+
+[[constraint]]
+  name = "gopkg.in/square/go-jose.v1"
+  version = "1.1.0"
