--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,14 @@ services:
   #     image: havengrc-docker.jfrog.io/redis
   #     ports:
   #       - "6379:6379"
+  # marketing:
+  #   volumes:
+  #     - ./marketing/public:/public
+  #   build:
+  #     context: .
+  #     dockerfile: ./marketing/Dockerfile
+  #   ports:
+  #     - "5000:2015"
   start_dependencies:
     image: dadarek/wait-for-dependencies
     depends_on:
