Now parsing claims and verifying token.
Still need to fix sql for setting claims in GUC.
Also need to validate if token expired.

Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/havenapi/Gopkg.toml
+++ b/havenapi/Gopkg.toml
@@ -60,3 +60,7 @@
 [[constraint]]
   name = "gopkg.in/square/go-jose.v1"
   version = "1.1.0"
+
+[[constraint]]
+  name = "gopkg.in/square/go-jose.v2"
+  version = "2.1.3"
