--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,18 +40,10 @@ jobs:
           no_output_timeout: 15m
           working_directory: webui
       - run: docker build --rm=false -t kindlyops/havenweb webui
-
-
-  deployment:
-    docker:
-      - image: circleci/node:6.10-browsers
-    steps:
-      - checkout
-      - setup_remote_docker
       - deploy:
           name: Prerelease
           command: |
-            if [ "${CIRCLE_BRANCH" == "master" ]; then
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
               docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
               docker tag kindlyops/mappamundi kindlyops/mappamundi:$CIRCLE_SHA1
               docker tag kindlyops/havenweb kindlyops/havenweb:$CIRCLE_SHA1
@@ -60,17 +52,3 @@ jobs:
             else
               echo "Not master branch so not deploying"
             fi
-      # TODO: port to circle 2.0
-      # release:
-      #   tag: /v[0-9]+(\.[0-9]+)*/
-      #   owner: kindlyops
-      #   commands:
-      #     - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      #     - docker tag kindlyops/mappamundi kindlyops/mappamundi:$CIRCLE_TAG
-      #     - docker tag kindlyops/havenweb kindlyops/havenweb:$CIRCLE_TAG
-      #     - docker tag kindlyops/mappamundi kindlyops/mappamundi:$CIRCLE_SHA1
-      #     - docker tag kindlyops/havenweb kindlyops/havenweb:$CIRCLE_SHA1
-      #     - docker push kindlyops/mappamundi:$CIRCLE_TAG
-      #     - docker push kindlyops/havenweb:$CIRCLE_TAG
-      #     - docker push kindlyops/mappamundi:$CIRCLE_SHA1
-      #     - docker push kindlyops/havenweb:$CIRCLE_SHA1
