Add some oc import-image stuff.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ jobs:
             tar xvzf openshift-origin-client-tools-v3.7.0-7ed6862-linux-64bit.tar.gz
             sudo mv openshift-origin-client-tools-v3.7.0-7ed6862-linux-64bit/oc /usr/local/bin/oc
             oc version
+            # todo: authenticate
       - run: docker-compose run start_dependencies
       - run: docker-compose run sqitch
       - run: docker-compose run start_keycloak
@@ -54,8 +55,11 @@ jobs:
               docker login -u $DOCKER_USER -p $DOCKER_PASS
               docker tag kindlyops/mappamundi kindlyops/mappamundi:$CIRCLE_SHA1
               docker tag kindlyops/havenweb kindlyops/havenweb:$CIRCLE_SHA1
+              docker tag kindlyops/havenweb kindlyops/havenweb:latest
               docker push kindlyops/mappamundi:$CIRCLE_SHA1
               docker push kindlyops/havenweb:$CIRCLE_SHA1
+              docker push kindlyops/havenweb:latest
+              oc import-image havenweb --from=docker.io/kindlyops/havenweb:latest --confirm
             else
               echo "Not master branch so not deploying"
             fi
