--- a/sqitch/Dockerfile
+++ b/sqitch/Dockerfile
@@ -1,7 +1,7 @@
 FROM havengrc-docker.jfrog.io/perl:latest
 RUN apt-get clean && apt-get update && apt-get -y install vim postgresql-client
 RUN cpan inc::latest
-RUN cpan App::Sqitch
+RUN cpan -fi App::Sqitch
 RUN cpan DBD::Pg
 VOLUME ["/src"]
 WORKDIR /src
