--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,15 +59,20 @@ jobs:
               docker tag kindlyops/mappamundi kindlyops/mappamundi:$CIRCLE_SHA1
               docker tag kindlyops/havensqitch kindlyops/havensqitch:$CIRCLE_SHA1
               docker tag kindlyops/havensqitch kindlyops/havensqitch:latest
+              docker tag kindlyops/havensqitch kindlyops/havenapi:$CIRCLE_SHA1
+              docker tag kindlyops/havensqitch kindlyops/havenapi:latest
               docker tag kindlyops/havenweb kindlyops/havenweb:$CIRCLE_SHA1
               docker tag kindlyops/havenweb kindlyops/havenweb:latest
               docker push kindlyops/mappamundi:$CIRCLE_SHA1
               docker push kindlyops/havensqitch:$CIRCLE_SHA1
               docker push kindlyops/havensqitch:latest
+              docker push kindlyops/havenapi:$CIRCLE_SHA1
+              docker push kindlyops/havenapi:latest
               docker push kindlyops/havenweb:$CIRCLE_SHA1
               docker push kindlyops/havenweb:latest
               oc import-image havenweb --from=docker.io/kindlyops/havenweb:latest
               oc import-image havensqitch --from=docker.io/kindlyops/havensqitch:latest
+              oc import-image havenapi --from=docker.io/kindlyops/havenapi:latest
             else
               echo "Not master branch so not deploying"
             fi
