Fix /auth login to keycloak admin Proxy /api/files to havenapi buffalo container Proxy /api to PostgREST container Fix Elm app urls to be relative to source.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,6 +122,7 @@ services:
       dockerfile: ./webui/Dockerfile-hotreload
     links:
       - api
+      - havenapi
       - keycloak
     ports:
       - "2015:2016"
