Use our JFrog docker repository.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/k8s/havenapi-deployment.yaml
+++ b/k8s/havenapi-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: havenapi
-          image: kindlyops/havenapi:0.0.5
+          image: havengrc-docker.jfrog.io/kindlyops/havenapi:0.0.5
           env:
             - name: GO_ENV
               value: "production"
