--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
               docker push kindlyops/havenapi:latest
               docker push kindlyops/havenweb:$CIRCLE_SHA1
               docker push kindlyops/havenweb:latest
-              oc set image deployment/havenapi havenapi=kindlyops/havenapi:$CIRCLE_SHA1
+              oc set image deployment/havenapi havenapi=havengrc-docker.jfrog.io/kindlyops/havenapi:$CIRCLE_SHA1
             else
               echo "Not master branch so not deploying"
             fi
