--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,9 @@ services:
   keycloak:
     depends_on:
       - start_dependencies
-    image: havengrc-docker.jfrog.io/jboss/keycloak-postgres:3.2.1.Final
+    build:
+      context: .
+      dockerfile: ./keycloak/Dockerfile
     environment:
       - POSTGRES_DATABASE=mappamundi_dev
       - POSTGRES_USER=postgres
