--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     build:
       context: .
       dockerfile: ./keycloak/Dockerfile
+    image: havengrc-docker.jfrog.io/jboss/keycloak:3.4.2.Final
     environment:
       - POSTGRES_DATABASE=mappamundi_dev
       - POSTGRES_USER=postgres
@@ -43,7 +44,6 @@ services:
       - db:postgres
     volumes:
       - ./keycloak/themes/haven:/opt/jboss/keycloak/themes/haven
-      - ./keycloak/configuration/standalone.xml:/opt/jboss/keycloak/standalone/configuration/standalone.xml
       - ./keycloak/data:/keycloak
     command: ["-b", "0.0.0.0", "-Dkeycloak.migration.file=/keycloak/havendev-realm.json", "-Dkeycloak.migration.strategy=IGNORE_EXISTING", "-Dkeycloak.migration.provider=singleFile", "-Dkeycloak.migration.action=import"]
   sqitch:
