--- a/k8s/havenapi-deployment.yaml
+++ b/k8s/havenapi-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: havenapi
-          image: havengrc-docker.jfrog.io/kindlyops/havenapi:0.0.5
+          image: havengrc-docker.jfrog.io/kindlyops/havenapi:latest
           env:
             - name: GO_ENV
               value: "production"
@@ -39,6 +39,11 @@ spec:
           ports:
             - containerPort: 3000
               protocol: TCP
+          resources:
+            limits:
+              memory: 256Mi
+            requests:
+              memory: 128Mi
           livenessProbe:
             httpGet:
               path: /healthz
