Adjust havenapi to point to database named havenstage Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/havenapi/database.yml
+++ b/havenapi/database.yml
@@ -13,6 +13,6 @@ production:
   host: {{envOr "DATABASE_HOST" "db"}}
   user: {{envOr "DATABASE_USERNAME" "postgres"}}
   password: {{env "DATABASE_PASSWORD"}}
-  database: havenprod
+  database: {{envOr "DATABASE_NAME" "havenstage" }}
   pool: 20
   dialect: postgres
