Fixes for havenweb to serve TLS via certs in k8s secret.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/k8s/havenweb-service.yaml
+++ b/k8s/havenweb-service.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     service: havenweb
   ports:
-  - nodePort: 0
-    port: 443
+  - name: https
     protocol: TCP
-    targetPort: 2015
+    port: 443
+    targetPort: 8443
