--- a/k8s/havenweb-deployment.yaml
+++ b/k8s/havenweb-deployment.yaml
@@ -19,13 +19,21 @@ spec:
             - name: ELM_APP_KEYCLOAK_CLIENT_ID
               value: "havendev"
           ports:
-            - containerPort: 2015
+            - containerPort: 8443
               protocol: TCP
+          volumeMounts:
+            - name: secret-volume
+              mountPath: /certs/
+              readOnly: true
           resources:
               limits:
                 memory: 256Mi
               requests:
                 memory: 128Mi
+      volumes:
+        - name: secret-volume
+          secret:
+            secretName: haven-tls
       restartPolicy: Always
   strategy:
     type: "Recreate"
