Fixes for keycloak.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/k8s/keycloak-deployment.yaml
+++ b/k8s/keycloak-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: keycloak
-          image: kindlyops/keycloak:latest
+          image: havengrc-docker.jfrog.io/kindlyops/keycloak:3.4.2.Final.1
           env:
             - name: POSTGRES_DATABASE
               value: "havenstage"
