Fix keycloak service.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/k8s/keycloak-service.yaml
+++ b/k8s/keycloak-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: keycloak      
+  name: keycloak
 spec:
-  selector:                  
+  selector:
     service: keycloak
   ports:
-  - nodePort: 0
-    port: 8080               
+  - name: https
     protocol: TCP
+    port: 8080
     targetPort: 8080
