Sqitch base image: remove volumes, add wrapper script with variables
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/sqitch/Dockerfile
+++ b/sqitch/Dockerfile
@@ -3,6 +3,6 @@ RUN apt-get clean && apt-get update && apt-get -y install vim postgresql-client
 RUN cpan inc::latest
 RUN cpan -fi App::Sqitch
 RUN cpan DBD::Pg
-VOLUME ["/src"]
 WORKDIR /src
-ENTRYPOINT ["/usr/local/bin/sqitch"]
+ADD run-sqitch.sh /usr/local/bin
+ENTRYPOINT ["/usr/local/bin/run-sqitch.sh"]
