Adjust docker-compose sqitch to use same ENV as k8s job
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,11 @@ services:
     build:
       context: .
     working_dir: /src
+    environment:
+      - DATABASE_USERNAME=postgres
+      - SQITCHPASSWORD=postgres
+      - DATABASE_HOST=db
+      - DATABASE_NAME=mappamundi_dev
     volumes:
       - .:/src
     links:
