--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,14 @@
 version: 2
 jobs:
-  build:
-    machine:
-      image: circleci/classic:edge
+  webui-build-job:
+    docker:
+      - image: circleci/node:7-browsers
     steps:
       - checkout
+      - add_ssh_keys
       - run:
-          name: Check docker-compose and docker version
-          command: docker-compose -v && docker -v
-      - run:
-          name: Build images
-          command: docker-compose build
+          name: Check docker version
+          command: docker -v
       - restore_cache:
           key: sysconfcpus
       - run:
@@ -30,6 +28,123 @@ jobs:
           no_output_timeout: 15m
           working_directory: webui
       - run:
+          name: compile Elm project
+          command: npm run-script build
+          no_output_timeout: 15m
+          working_directory: webui
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run: docker build -t kindlyops/havenweb:latest webui
+      - run: docker tag kindlyops/havenweb:latest kindlyops/havenweb:$CIRCLE_SHA1
+      - run: docker tag kindlyops/havenweb:latest kindlyops/havenweb:$CIRCLE_BUILD_NUM
+      - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
+      - run: docker push kindlyops/havenweb:$CIRCLE_SHA1
+      - run: docker push kindlyops/havenweb:$CIRCLE_BUILD_NUM
+      - run: docker push kindlyops/havenweb:latest
+  flyway-build-job:
+    docker:
+      - image: circleci/openjdk:9
+    steps:
+      - checkout
+      - add_ssh_keys
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run: docker build -t kindlyops/havenflyway:latest flyway
+      - run: docker tag kindlyops/havenflyway:latest kindlyops/havenflyway:$CIRCLE_SHA1
+      - run: docker tag kindlyops/havenflyway:latest kindlyops/havenflyway:$CIRCLE_BUILD_NUM
+      - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
+      - run: docker push kindlyops/havenflyway:$CIRCLE_SHA1
+      - run: docker push kindlyops/havenflyway:$CIRCLE_BUILD_NUM
+      - run: docker push kindlyops/havenflyway:latest
+  postgrest-build-job:
+    docker:
+      - image: circleci/openjdk:9
+    steps:
+      - checkout
+      - add_ssh_keys
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run: docker build -t kindlyops/postgrest:latest -f postgrest/Dockerfile .
+      - run: docker tag kindlyops/postgrest:latest kindlyops/postgrest:$CIRCLE_SHA1
+      - run: docker tag kindlyops/postgrest:latest kindlyops/postgrest:$CIRCLE_BUILD_NUM
+      - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
+      - run: docker push kindlyops/postgrest:$CIRCLE_SHA1
+      - run: docker push kindlyops/postgrest:$CIRCLE_BUILD_NUM
+      - run: docker push kindlyops/postgrest:latest
+  keycloak-build-job:
+    docker:
+      - image: circleci/openjdk:9
+    steps:
+      - checkout
+      - add_ssh_keys
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run: docker build -t kindlyops/keycloak:latest -f keycloak/Dockerfile .
+      - run: docker tag kindlyops/keycloak:latest kindlyops/keycloak:$CIRCLE_SHA1
+      - run: docker tag kindlyops/keycloak:latest kindlyops/keycloak:$CIRCLE_BUILD_NUM
+      - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
+      - run: docker push kindlyops/keycloak:$CIRCLE_SHA1
+      - run: docker push kindlyops/keycloak:$CIRCLE_BUILD_NUM
+      - run: docker push kindlyops/keycloak:latest
+  havenapi-build-job:
+    docker:
+      - image: circleci/node:7-browsers
+    steps:
+      - checkout
+      - add_ssh_keys
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run: docker build --rm=false -t kindlyops/havenapi havenapi
+      - run: docker tag kindlyops/havenapi:latest kindlyops/havenapi:$CIRCLE_SHA1
+      - run: docker tag kindlyops/havenapi:latest kindlyops/havenapi:$CIRCLE_BUILD_NUM
+      - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
+      - run: docker push kindlyops/havenapi:$CIRCLE_BUILD_NUM
+      - run: docker push kindlyops/havenapi:$CIRCLE_SHA1
+      - run: docker push kindlyops/havenapi:latest
+  havenapi-testing-job:
+    docker:
+      - image: circleci/ruby:2.4
+      - image: circleci/postgres:9.6.4-alpine
+        environment:
+          POSTGRES_USER: circleci
+          POSTGRES_DB: mappamundi_dev
+          POSTGRES_PASSWORD: ""
+    steps:
+      - checkout
+      - add_ssh_keys
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          name: Run tests
+          environment:
+            - POSTGRES_DATABASE=mappamundi_dev
+            - POSTGRES_USER=circleci
+            - POSTGRES_PASSWORD=circleci
+            - POSTGRES_PORT_5432_TCP_ADDR=localhost
+            - KEYCLOAK_USER=admin
+            - KEYCLOAK_PASSWORD=admin
+            - PROXY_ADDRESS_FORWARDING=true
+            - FLYWAY_URL=jdbc:postgresql://localhost/mappamundi_dev
+            - FLYWAY_USER=circleci
+            - FLYWAY_PASSWORD=
+            - FLYWAY_IGNORE_MISSING_MIGRATIONS=true
+            - FLYWAY_GROUP=true
+            - FLYWAY_SCHEMAS=mappa,1
+            - FLYWAY_PLACEHOLDERS_DATABASEUSER=circleci
+          command: |
+            docker run -d --name keycloak kindlyops/keycloak:$CIRCLE_SHA1
+            # wait for DB
+            dockerize -wait tcp://localhost:5432 -timeout 1m
+            # Wait for keycloak
+            docker run --network container:keycloak jwilder/dockerize  -wait tcp://localhost:8080 -timeout 1m
+            docker run -it --network container:keycloak kindlyops/havenflyway:$CIRCLE_SHA1 migrate
+            # TODO run havenapibuffalo test
+            # TODO run cucumber test
+  deploy-staging:
+      - add_ssh_keys
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
           name: Install OpenShift client
           command: |
             wget https://github.com/openshift/origin/releases/download/v3.7.0/openshift-origin-client-tools-v3.7.0-7ed6862-linux-64bit.tar.gz
@@ -39,50 +154,34 @@ jobs:
             # todo: authenticate
             oc login https://console.pro-us-east-1.openshift.com/ --token=$OPENSHIFT_TOKEN
             oc project haven-production
-      - run: docker-compose run start_dependencies
-      - run: docker-compose run flyway
-      - run: docker-compose run start_keycloak
-      - run: docker build --rm=false -t kindlyops/havenapi havenapi/
-      - run: docker build --rm=false -t kindlyops/havenflyway flyway/
-      - run: docker build --rm=false -t kindlyops/postgrest -f postgrest/Dockerfile .
-      - run:
-          name: compile Elm project
-          command: npm run-script build
-          no_output_timeout: 15m
-          working_directory: webui
-      - run: docker build --rm=false -t kindlyops/havenweb webui
-      - run: docker build --rm=false -t kindlyops/keycloak -f keycloak/Dockerfile .
-      - run: ./test
       - deploy:
           name: Prerelease
           command: |
-            if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              docker login -u $DOCKER_USER -p $DOCKER_PASS
-              docker tag kindlyops/havenflyway kindlyops/havenflyway:$CIRCLE_SHA1
-              docker tag kindlyops/havenflyway kindlyops/havenflyway:latest
-              docker tag kindlyops/havenapi kindlyops/havenapi:$CIRCLE_SHA1
-              docker tag kindlyops/havenapi kindlyops/havenapi:latest
-              docker tag kindlyops/havenweb kindlyops/havenweb:$CIRCLE_SHA1
-              docker tag kindlyops/havenweb kindlyops/havenweb:latest
-              docker tag kindlyops/keycloak kindlyops/keycloak:$CIRCLE_SHA1
-              docker tag kindlyops/keycloak kindlyops/keycloak:latest
-              docker tag kindlyops/postgrest kindlyops/postgrest:$CIRCLE_SHA1
-              docker tag kindlyops/postgrest kindlyops/postgrest:latest
-              docker push kindlyops/havenflyway:$CIRCLE_SHA1
-              docker push kindlyops/havenflyway:latest
-              docker push kindlyops/havenapi:$CIRCLE_SHA1
-              docker push kindlyops/havenapi:latest
-              docker push kindlyops/havenweb:$CIRCLE_SHA1
-              docker push kindlyops/havenweb:latest
-              docker push kindlyops/keycloak:$CIRCLE_SHA1
-              docker push kindlyops/keycloak:latest
-              docker push kindlyops/postgrest:$CIRCLE_SHA1
-              docker push kindlyops/postgrest:latest
-              oc set image deployment/havenapi havenapi=havengrc-docker.jfrog.io/kindlyops/havenapi:$CIRCLE_SHA1
-              oc set image deployment/havenweb havenweb=havengrc-docker.jfrog.io/kindlyops/havenweb:$CIRCLE_SHA1
-            else
-              echo "Not master branch so not deploying"
-            fi
+            echo release temporarily disabled
+            #oc set image deployment/havenapi havenapi=havengrc-docker.jfrog.io/kindlyops/havenapi:$CIRCLE_SHA1
+            #oc set image deployment/havenweb havenweb=havengrc-docker.jfrog.io/kindlyops/havenweb:$CIRCLE_SHA1
+workflows:
+  version: 2
+  builds:
+    jobs:
+      - webui-build-job
+      - flyway-build-job
+      - keycloak-build-job
+      - havenapi-build-job
+      - postgrest-build-job
+      - avenapi-testing-job:
+          requires:
+            - flyway-build-job
+            - keycloak-build-job
+            - havenapi-build-job
+            - postgrest-build-job
+      - approve-deploy:
+          type: approval
+          requires:
+            - test
+      - deploy-staging:
+          requires:
+            - approve-deploy
       # TODO: port to circle 2.0
       # release:
       #   tag: /v[0-9]+(\.[0-9]+)*/
