--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,16 +117,14 @@ jobs:
       - run:
           name: Run tests
           environment:
-            - POSTGRES_DATABASE: mappamundi_dev
+            - POSTGRES_DATABASE: mappadmundi_dev
             - POSTGRES_USER: circleci
-            - POSTGRES_PASSWORD: circleci
             - POSTGRES_PORT_5432_TCP_ADDR: localhost
             - KEYCLOAK_USER: admin
             - KEYCLOAK_PASSWORD: admin
             - PROXY_ADDRESS_FORWARDING: true
             - FLYWAY_URL: jdbc:postgresql://localhost/mappamundi_dev
             - FLYWAY_USER: circleci
-            - FLYWAY_PASSWORD:
             - FLYWAY_IGNORE_MISSING_MIGRATIONS: true
             - FLYWAY_GROUP: true
             - FLYWAY_SCHEMAS: mappa,1
@@ -135,10 +133,10 @@ jobs:
             # wait for DB
             dockerize -wait tcp://localhost:5432 -timeout 1m
             # start keycloak in background container
-            docker run -d --name keycloak kindlyops/keycloak:$CIRCLE_SHA1
+            docker run -d -e POSTGRES_DATABASE -e POSTGRES_USER -e POSTGRES_PORT_5432_TCP_ADDR -e KEYCLOAK_USER -e KEYCLOAK_PASSWORD -e PROXY_ADDRESS_FORWARDING --name keycloak kindlyops/keycloak:$CIRCLE_SHA1
             # Wait for keycloak
             docker run --network container:keycloak jwilder/dockerize  -wait tcp://localhost:8080 -timeout 1m
-            docker run -it --network container:keycloak kindlyops/havenflyway:$CIRCLE_SHA1 migrate
+            docker run -e FLYWAY_URL -e FLYWAY_USER -e FLYWAY_IGNORE_MISSING_MIGRATIONS -e FLYWAY_GROUP -e FLYWAY_SCHEMAS -e FLYWAY_PLACEHOLDERS_DATABASEUSER --network container:keycloak kindlyops/havenflyway:$CIRCLE_SHA1 migrate
             # TODO run havenapibuffalo test
             # TODO run cucumber test
   deploy-staging:
@@ -184,9 +182,15 @@ workflows:
           requires:
             - havenapi-testing-job
             - webui-build-job
+          filters:
+            branches:
+              only: master
       - deploy-staging:
           requires:
             - approve-deploy
+          filters:
+            branches:
+              only: master
       # TODO: port to circle 2.0
       # release:
       #   tag: /v[0-9]+(\.[0-9]+)*/
